plugins {
    alias(libs.plugins.room)
}
apply plugin: 'com.android.application'

def keystorePropertiesFile = rootProject.file("keystore.properties")
def keystoreProperties = new Properties()
def hasSigningConfig = keystorePropertiesFile.exists()

if (hasSigningConfig) {
    keystorePropertiesFile.withInputStream { input ->
        keystoreProperties.load(input)
    }
}

android {
    namespace 'com.sumon.bundleapp.installer'
    compileSdk 37

    buildFeatures {
        buildConfig true
    }

    defaultConfig {
        applicationId "com.sumon.bundleapp.installer"
        minSdk 23
        targetSdk 36
        versionCode 61
        versionName "4.6"

        buildConfigField "int", "DEFAULT_THEME", "6"
        buildConfigField "int", "DEFAULT_DARK_THEME", "11"
    }

    signingConfigs {
        release {
            if (hasSigningConfig) {
                storeFile file(keystoreProperties['storeFile'])
                storePassword keystoreProperties['storePassword']
                keyAlias keystoreProperties['keyAlias']
                keyPassword keystoreProperties['keyPassword']
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles(
                    getDefaultProguardFile('proguard-android-optimize.txt'),
                    'proguard-rules.pro'
            )

            if (hasSigningConfig) {
                signingConfig signingConfigs.release
            }
        }
    }

    splits {
        abi {
            enable true
            reset()
            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
            universalApk false
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
}

/*
 * Room schema export configuration.
 *
 * Room 2.8.4 exports database schemas during compilation.
 * The generated JSON files are written to app/schemas/.
 */
room {
    schemaDirectory "$projectDir/schemas"
}

dependencies {
    // SAIR signing implementation
    implementation libs.apksig
    // Memory leak detection (debug builds only)
    debugImplementation libs.leakcanary.android

    // Local JAR/AAR dependencies
    implementation fileTree(
            dir: 'libs',
            include: ['*.jar', '*.aar']
    )
    implementation project(':libs:filepicker')

    // AndroidX
    implementation libs.appcompat
    implementation libs.documentfile
    implementation libs.lifecycle.extensions1
    implementation libs.lifecycle.common.java8
    implementation libs.preference
    implementation libs.recyclerview

    // Material Design
    implementation libs.material

    // UI / Utilities
    implementation libs.glide
    annotationProcessor libs.compiler
    implementation libs.flexbox
    implementation libs.tooltips
    implementation libs.gson
    implementation libs.shimmer

    // Room
    def room_version = "2.8.4"
    implementation libs.room.runtime
    annotationProcessor libs.room.compiler

    // Shizuku / Sui
    def shizuku_version = "13.1.5"
    implementation libs.api
    implementation libs.provider
    implementation libs.shared
    implementation libs.aidl

    // flexfilter: vendored at com/aefyr/flexfilter/
    // pseudoapksigner: vendored at com/aefyr/pseudoapksigner/
}
